--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node local.js",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run salespage:server:production --bundleDependencies all",
+    "server": "node local.js",
+    "build:prod": "npm run build:ssr",
+    "start:prerender": "npm run build:prerender & npm run serve:prerender",
+    "serve:prerender": "node static.js",
+    "build:prerender": "npm run build:prod && node dist/prerender.js"
   },
   "private": true,
   "dependencies": {
@@ -18,20 +27,28 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/platform-server": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@babel/compat-data": "^7.8.0",
+    "@ng-toolkit/universal": "^8.1.0",
+    "@nguniversal/express-engine": "v8.2.6",
+    "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
+    "express": "^4.15.2",
     "jquery": "^3.4.1",
     "ngx-cookie-service": "^11.0.2",
     "ngx-facebook": "^2.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@nguniversal/common": "8.1.0",
+    "domino": "^2.1.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "^8.1.0",
     "@angular/compiler-cli": "^8.1.0",
     "@angular/language-service": "~8.2.14",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -44,9 +61,11 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "^5.4.3",
+    "ts-loader": "^5.2.0",
     "ts-node": "^8.8.1",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "webpack-cli": "^3.1.0"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.21.",
   "main": "karma.conf.js",
