--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@angular/router": "~8.2.14",
     "@babel/compat-data": "^7.8.0",
     "@ng-toolkit/universal": "^8.1.0",
+    "@nguniversal/common": "8.1.0",
     "@nguniversal/express-engine": "v8.2.6",
     "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
+    "domino": "^2.1.4",
     "express": "^4.15.2",
     "jquery": "^3.4.1",
     "ngx-cookie-service": "^11.0.2",
     "ngx-facebook": "^2.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "@nguniversal/common": "8.1.0",
-    "domino": "^2.1.4"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
